--- a/my-react-app 8.33.57 PM/src/App.css
+++ b/my-react-app 8.33.57 PM/src/App.css
@@ -1,11 +1,13 @@
 .App {
   text-align: center;
   font-family: Arial, sans-serif;
+  margin: 10px;
 }
+
 
 .App-header {
   background-color: #ffffff;
-  padding: 20px;
+  padding: 10px;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -14,7 +16,6 @@
   justify-content: space-between;
   align-items: center;
 }
-
 .navbar-brand {
   font-size: 24px;
   font-weight: bold;
@@ -49,6 +50,9 @@
 .navbar-links a.active {
   color: #00c6ff;
 }
+.navbar-links a.dead {
+  color: #090909;
+}
 
 .navbar-buttons {
   display: flex;
@@ -67,7 +71,7 @@
 }
 
 .hero {
-  margin: 50px 0;
+  margin: 10px 0;
   position: relative;
 }
 .hero-image {
@@ -97,9 +101,6 @@
   margin-left: auto;
   margin-right: auto;
 }
-
-
-
 
 .benefits {
   background-color: #f0f8ff;
@@ -151,6 +152,8 @@
   font-size: 16px;
   color: #666;
 }
+
+
 .people-container {
   width: 80%;
   margin: 0 auto;
@@ -240,3 +243,4 @@
   font-size: 16px;
   margin-bottom: 10px;
 }
+
