--- a/src/App.css
+++ b/src/App.css
@@ -244,6 +244,12 @@
   margin-bottom: 10px;
 }
 
+.labInfo{
+    text-align: center;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
 
 .publications {
   font-family: 'Arial, sans-serif';
