--- a/src/App.css
+++ b/src/App.css
@@ -251,10 +251,16 @@
 }
 
 .labInfo {
-  text-align: center;
-  padding: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #333;
+    line-height: 1.6;
+    margin: 20px;
+    padding: 0;
+}
+
+.labInfo p{
+  font-size: 1.1em;
+  margin-bottom: 1.2em;
 }
 
 .publications {
